ensure delete only visible contacts, remove unnecessary spaces in filter, add vertical space on small screens

--- a/phone_book_jquery/phoneBook.css
+++ b/phone_book_jquery/phoneBook.css
@@ -178,3 +178,10 @@ body {
 .filter-input {
     width: 300px;
 }
+
+@media screen and (max-width: 642px) {
+    .delete-contact {
+        margin-bottom: 5px;
+
+    }
+}
